--- a/LoginAndRegistration/LoginAndRegistration/Views/Register/Index.cshtml
+++ b/LoginAndRegistration/LoginAndRegistration/Views/Register/Index.cshtml
@@ -1,54 +1,60 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<div class="col-md-6">
-    <div class="padding-top-3x hidden-md-up"></div>
-    <h3 class="margin-bottom-1x">No Account? Register</h3>
-    <p>Registration takes less than a minute but gives you full control over your orders.</p>
-    <form class="row" method="post">
-        <div class="col-sm-6">
-            <div class="form-group">
-                <label for="reg-fn">First Name</label>
-                <input class="form-control" type="text" id="reg-fn" required>
+    <div class="col-md-6">
+            <div class="container padding-bottom-3x mb-2">
+                <div style="margin:0 auto;width:70%;text-align:left">
+                    <form class="login-box" method="post">
+                        <div class="row margin-bottom-1x">
+                        <div class="col-xl-4 col-md-6 col-sm-4"><a class="btn btn-sm btn-block facebook-btn" href="#"><i class="socicon-facebook"></i>&nbsp;Facebook login</a></div>
+                            <div class="col-xl-4 col-md-6 col-sm-4"><a class="btn btn-sm btn-block twitter-btn" href="#"><i class="socicon-twitter"></i>&nbsp;Twitter login</a></div>
+                            <div class="col-xl-4 col-md-6 col-sm-4"><a class="btn btn-sm btn-block google-btn" href="#"><i class="socicon-googleplus"></i>&nbsp;Google+ login</a></div>
+                        </div>
+                        <div class="padding-top-3x hidden-md-up"></div>
+                        <h3 class="margin-bottom-1x">Create Account</h3>
+                        <p>Registration takes less than a minute but gives you full control of your profile .</p>
+                      
+                            <div class="col-sm-6">
+                                <div class="form-group">
+                                    <label for="reg-fn">First Name</label>
+                                    <input class="form-control" type="text" id="reg-fn" required>
+                                </div>
+                            </div>
+                            <div class="col-sm-6">
+                                <div class="form-group">
+                                    <label for="reg-ln">Last Name</label>
+                                    <input class="form-control" type="text" id="reg-ln" required>
+                                </div>
+                            </div>
+                            <div class="col-sm-6">
+                                <div class="form-group">
+                                    <label for="reg-email">E-mail Address</label>
+                                    <input class="form-control" type="email" id="reg-email" required>
+                                </div>
+                            </div>
+                            <div class="col-sm-6">
+                                <div class="form-group">
+                                    <label for="reg-phone">Phone Number</label>
+                                    <input class="form-control" type="text" id="reg-phone" required>
+                                </div>
+                            </div>
+                            <div class="col-sm-6">
+                                <div class="form-group">
+                                    <label for="reg-pass">Password</label>
+                                    <input class="form-control" type="password" id="reg-pass" required>
+                                </div>
+                            </div>
+                            <div class="col-sm-6">
+                                <div class="form-group">
+                                    <label for="reg-pass-confirm">Confirm Password</label>
+                                    <input class="form-control" type="password" id="reg-pass-confirm" required>
+                                </div>
+                            </div>
+                            <div class="col-12 text-center text-sm-right">
+                                <button class="btn btn-primary margin-bottom-none" type="submit">Register</button>
+                            </div>
+                        </form>
+                </div>
             </div>
-        </div>
-        <div class="col-sm-6">
-            <div class="form-group">
-                <label for="reg-ln">Last Name</label>
-                <input class="form-control" type="text" id="reg-ln" required>
-            </div>
-        </div>
-        <div class="col-sm-6">
-            <div class="form-group">
-                <label for="reg-email">E-mail Address</label>
-                <input class="form-control" type="email" id="reg-email" required>
-            </div>
-        </div>
-        <div class="col-sm-6">
-            <div class="form-group">
-                <label for="reg-phone">Phone Number</label>
-                <input class="form-control" type="text" id="reg-phone" required>
-            </div>
-        </div>
-        <div class="col-sm-6">
-            <div class="form-group">
-                <label for="reg-pass">Password</label>
-                <input class="form-control" type="password" id="reg-pass" required>
-            </div>
-        </div>
-        <div class="col-sm-6">
-            <div class="form-group">
-                <label for="reg-pass-confirm">Confirm Password</label>
-                <input class="form-control" type="password" id="reg-pass-confirm" required>
-            </div>
-        </div>
-        <div class="col-12 text-center text-sm-right">
-            <button class="btn btn-primary margin-bottom-none" type="submit">Register</button>
-        </div>
-    </form>
-</div>
-        </div>
-      </div>
+    </div>
